@@ -2,9 +2,11 @@ user1:
   id: 1
   name: Kent
   active: 1
+  balance: 12.2
   created_on: <%= Date.today %>
 user2:
   id: 2
   name: David
   active: 1
+  balance: 16.4
   created_on: <%= Date.today %>
